--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,22 @@
     --container-width-sm: 90%;
 }
 
+/* CSS Variables for Light Mode to target Footer */
+.light-mode footer {
+    --color-bg: #2c2c6c;
+    --color-footer-bg: #fff;
+    --color-footer-text: #ffffff;
+    --color-footer-light-hover: #4db5ff;
+}
+
+/* CSS Variables for Dark Mode to target Footer */
+.dark-mode footer {
+    --color-bg: #121212;
+    --color-footer-bg: #222222;
+    --color-footer-text: #4db5ff;
+    --color-footer-light-hover: #ffffff;
+}
+
 html {
     scroll-behavior: smooth;
 }
